Tue Feb 26 22:22:37 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkbox.c (gtk_box_reorder_child): Clean up
	the code so < 0 == end wasn't just a side effect,
	remove most of the manual linked list manipulation
	code in favor of g_list_* functions.

Tue Feb 26 21:44:01 2002  Owen Taylor  <otaylor@redhat.com>

	* config.status config.guess: Remove these files
	from CVS so we more-or-less current versions from
	automake --add-missing. (Reported by Finlay Dobbie,
	#60342)

	* gdk/gdkkeyuni.c: Shouldn't map KP_Enter to '\n',
	or KP_Tab to \t' since we don't map the corresponding
	main keyboard characters in that way. (#61561,
	Padraig O'Briain)

Tue Feb 26 19:45:29 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkcombo.c (gtk_combo_set_popdown_strings):
	Call gtk_combo_set_popdown_strings() in case
	the combo is up currently. (#63535, Skip Montaro)

Tue Feb 26 19:38:14 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkscrolledwindow.c (gtk_scrolled_window_class_init):
	Switch control-home/end and home/end with
	the idea that scrolled windows more typically contain
	vertical sets of controls and to correspond to the bindings
	in GtkTreeView.

Tue Feb 26 19:32:42 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtk[hv]vscale.c (gtk_[hv]scale_expose): Chain
	up before drawing the scale values so that the number
	is drawn in the right place instead of one step 
	back. (#61743, patch from Satyajit Kanungo)

Tue Feb 26 19:16:28 2002  Owen Taylor  <otaylor@redhat.com>

	* gdk/win32/gdkkeys-win32.c (gdk_keyval_name): 
	* gdk/x11/gdkkeys-x11.c (gdk_keyval_name): 
	Make sure Page_Up, Page_Down get those names, not Prior,
	Next.

Tue Feb 26 18:58:49 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkaccelgroup.c (gtk_accelerator_set_default_mod_mask):
	OR in the three default modifiers to any value passed
	in by the caller, so that the caller won't break the
	the default bindings. (#70142, Jody Goldberg, though he
	wasn't in favor of this particular way of solving it.)
